Fix layout for tablet devices * make navigation actions responsive: when in collapsed mode, use text, when in tablet mode use icon for icon, when larger, use GitHub text * quotes * footer

--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -14,7 +14,7 @@ $navbar-input-border-color: $bazel-green;
 
   .navbar-brand {
     padding-top: 12px;
-    
+
     .navbar-logo {
       height: 28px;
     }
@@ -38,10 +38,10 @@ $navbar-input-border-color: $bazel-green;
       color: $navbar-hover-color;
       background-color: $navbar-hover-bg-color;
     }
+  }
 
-    &.nav-icon {
-      font-size: 18px;
-    }
+   .navbar-nav .nav-icon {
+    font-size: 18px;
   }
 
   .navbar-nav > li.active > a {
@@ -90,7 +90,7 @@ $navbar-input-border-color: $bazel-green;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   #cse-search-box {
     margin-top: 0;
     margin-bottom: 0;
